<package>
  <name>cpr_robots_driver</name>
  <version>0.0.1</version>

  <description brief="Hardware drivers and teleop for the Commonplace Robotics robot arm Mover4 and mobile platform Slider ">
  	This stack contains hardware drivers, urdf files and keyboard teleop for the Commonplace Robotics robots: robot arm Mover4 and mobile platform Slider, see: <a href="http://www.cpr-robots.com">www.cpr-robots.com</a>. 
	
	Specifically, it provides in package cpr_robots_hwinterface:
	<ul>
  		<li>node CPRKinSlider to connect with the Slider hardware</li>
	</ul>

  	The package cpr_robots_teleop contains:
  	<ul>
  		<li> node CPRTeleopKeyboard to allow testing the robot</li>
  	</ul>
  </description>

  <license>GPL</license>

  <url type="website">http://github.com/emiliofidalgo/cpr_robots_driver</url>

  <author email="christian.meyer@cpr-robots.com">Christian Meyer</author>

  <maintainer email="christian.meyer@cpr-robots.com">Christian Meyer</maintainer>
  <maintainer email="emilio.garcia@uib.es">Emilio Garcia-Fidalgo</maintainer>

  <run_depend>cpr_robots_hwinterface</run_depend>
  <run_depend>cpr_robots_teleop</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
